--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -6,11 +6,13 @@
     border: 1px solid #626267;
     background-color: #626267;
     color: #ECFEAA;
-    padding: 0.75rem 2.5rem;
+    /* padding: 0.75rem 2.5rem; */
     cursor: pointer;
     font-size: 1.5em;
     border-radius: 5px;
     margin: 2.5px;
+    height: 50px;
+    flex-basis: 48%;
 }
 
 .button:hover,
