--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -24,11 +24,17 @@ input:focus{
     border-color: #A6A670;;
 }
 
-input[type=number] {
-    -moz-appearance:textfield;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
-input::-webkit-outer-spin-button, 
-input::-webkit-inner-spin-button { margin-left: 20px; }
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .invalid input{
     border-color: red;
