--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 
 h1 {
+    color: #474350;
     font-size: large;
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
   
