--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -3,21 +3,20 @@
     justify-content: center;
     align-items: center;
     font: inherit;
-    border: 1px solid #626267;
-    background-color: #626267;
-    color: #ECFEAA;
+    border: 1px solid #474350;
+    background-color: #474350;
+    color: #ffdfc7;
     cursor: pointer;
     font-size: 1.5em;
     border-radius: 5px;
     margin: 2.5px;
-    height: 50px;
-    flex-basis: 48%;
 }
 
 .button:hover,
 .button:active {
-    background: #86836D;
-    border-color: #86836D;
+    color: #FCFFEB;
+    background: #65626e;
+    border-color: #65626e;
 }
 
 .button:focus{
